manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymybuddy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymybuddy-backend
  template:
    metadata:
      labels:
        app: paymybuddy-backend
    spec:
      containers:
      - name: paymybuddy-backend
        image: baaptistee/paymybuddy-backend:latest
        ports:
        - containerPort: 8080
