manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymybuddy-backend-service
spec:
  type: LoadBalancer
  selector:
    app: paymybuddy-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
