manifest/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymybuddy-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymybuddy-db
  template:
    metadata:
      labels:
        app: paymybuddy-db
    spec:
      containers:
        - name: mysql
          image: baaptistee/paymybuddy-db:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: paymybuddy-db
spec:
  selector:
    app: paymybuddy-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
